--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,13 +3,14 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  text-align: center;
+  margin: 0px;
+  position: relative;
 }
 
 #search-box {
@@ -17,4 +18,69 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.search-form {
+  padding: 7px 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+img {
+  display: inline-block;
+  margin: 0;
+  padding: 0px;
+  width: auto;
+  height: 200px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+
+.photo-card {
+  margin-right: 15px;
+  margin-bottom: 15px;
+  flex-basis: calc((100% - 30px) / 3);
+}
+
+.photo-card:last-child {
+  margin-bottom: 0px;
+  margin-right: 0px;
+}
+
+.gallery_link {
+  flex-grow: 1;
+}
+
+.gallery__image {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+  cursor: zoom-in;
+}
+
+.info {
+  font-size: 1.1rem;
+  display: flex;
+  gap: 5px;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 0 5px;
+}
+
+.info-item {
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.load-more{
+  margin-left: auto;
+  margin-right: auto;
 }
